# matsuzawa-20260211-5

./: pyproject.toml
.github/prompts/: run_code_generator.md  run_experiment_validator.md
.github/workflows/: run_experiment_validator.yml  run_main_experiment.yml  run_sanity_check.yml  run_visualization.yml
.research/: research_history.json
config/: config.yaml
config/run/: comparative-0-gsm8k.yaml
config/runs/: proposed-gsm8k.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py  train.py
