[project]
name = "matsuzawa-20260211-5"
version = "0.1.0"
description = "Chain-of-Thought reasoning experiments with AD3-SC"
requires-python = ">=3.9"

dependencies = [
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.16.0",
    "openai>=1.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]
